# concurrent-cache-conscious-hamt-in-rust

./: .gitignore  Benchmark.ipynb  Cargo.toml  README.md  main.rs
benches/: contiguous_cctrie.rs  contiguous_cctrie_one_rwlock.rs  lockfree_cctrie.rs  random_contiguous_cctrie.rs  rev_contiguous_cctrie.rs
dump/: 24_8_compare.csv  24_8_hashmap.csv  32_8_compare.csv  32_8_hashmap.csv  32_8_rev.csv  32_8_rev_compare.csv  32_8_rwlock_vs_hashmap.csv
src/: allocator.rs  bench.rs  cache_vec.rs  cchamt.rs  cctrie.rs  cctrie_contiguous.rs  contiguous_cctrie.rs  contiguous_cctrie_one_mutex.rs  contiguous_cctrie_one_rwlock.rs  hamt.rs  lib.rs  lockfree_cchamt.rs  lockfree_cctrie.rs  optimal_contiguous_cctrie.rs  rw_contiguous_cctrie.rs
tests/: allocator.rs  cache_vec.rs  cctrie.rs  contiguous_cctrie.rs  lockfree_cctrie.rs
