[package]
name = "parallel-hamt-cache-conscious"
version = "0.1.0"
authors = ["chichunchen <chichunchen844@gmail.com>", "Wang, Shaojie <swang115@ur.rochester.edu>"]

[dependencies]
rand="0.4.2"
chashmap="2.2.0"
rayon="1.0.1"

[lib]
name = "cchamt"
path = "src/lib.rs"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
